syntax = "proto3";

package feos.host.v1;

option go_package = "github.com/ironcore-dev/feos/go/feos-go/gen/feos/host/v1";

import "google/protobuf/timestamp.proto";

// HostService provides information about the host system.
service HostService {
  // Retrieves the hostname of the machine running the service.
  rpc Hostname(HostnameRequest) returns (HostnameResponse);
  rpc GetMemory(MemoryRequest) returns (MemoryResponse);
  rpc GetCPUInfo(GetCPUInfoRequest) returns (GetCPUInfoResponse);
  rpc GetKernelStats(GetKernelStatsRequest) returns (GetKernelStatsResponse);
  // Retrieves statistics for all network interfaces.
  rpc GetNetworkInfo(GetNetworkInfoRequest) returns (GetNetworkInfoResponse);
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
  rpc Reboot(RebootRequest) returns (RebootResponse);

  // Triggers an upgrade of the running FeOS binary by pulling it from a URL.
  rpc UpgradeFeosBinary(UpgradeFeosBinaryRequest) returns (UpgradeFeosBinaryResponse);

  // Streams kernel log messages from /dev/kmsg.
  rpc StreamKernelLogs(StreamKernelLogsRequest) returns (stream KernelLogEntry);

  // Streams logs from the internal FeOS logger.
  rpc StreamFeOSLogs(StreamFeosLogsRequest) returns (stream FeosLogEntry);

  // Retrieves version information about the host system.
  rpc GetVersionInfo(GetVersionInfoRequest) returns (GetVersionInfoResponse);
}

message HostnameRequest {}

message HostnameResponse {
  string hostname = 1;
}

message UpgradeFeosBinaryRequest {
  // The URL from which to download the new binary.
  string url = 1;
  // The SHA256 checksum of the binary file, hex-encoded, for verification.
  string sha256_sum = 2;
}

message UpgradeFeosBinaryResponse {}

message StreamKernelLogsRequest {}

message KernelLogEntry {
  // A single raw log line from the kernel log buffer.
  string message = 1;
}

message ShutdownRequest {}

message ShutdownResponse {}

message RebootRequest {}

message RebootResponse {}

message MemoryRequest {}

message MemoryResponse {
  MemInfo mem_info = 1;
}

message MemInfo {
  uint64 memtotal = 1;
  uint64 memfree = 2;
  uint64 memavailable = 3;
  uint64 buffers = 4;
  uint64 cached = 5;
  uint64 swapcached = 6;
  uint64 active = 7;
  uint64 inactive = 8;
  uint64 activeanon = 9;
  uint64 inactiveanon = 10;
  uint64 activefile = 11;
  uint64 inactivefile = 12;
  uint64 unevictable = 13;
  uint64 mlocked = 14;
  uint64 swaptotal = 15;
  uint64 swapfree = 16;
  uint64 dirty = 17;
  uint64 writeback = 18;
  uint64 anonpages = 19;
  uint64 mapped = 20;
  uint64 shmem = 21;
  uint64 slab = 22;
  uint64 sreclaimable = 23;
  uint64 sunreclaim = 24;
  uint64 kernelstack = 25;
  uint64 pagetables = 26;
  uint64 nfsunstable = 27;
  uint64 bounce = 28;
  uint64 writebacktmp = 29;
  uint64 commitlimit = 30;
  uint64 committedas = 31;
  uint64 vmalloctotal = 32;
  uint64 vmallocused = 33;
  uint64 vmallocchunk = 34;
  uint64 hardwarecorrupted = 35;
  uint64 anonhugepages = 36;
  uint64 shmemhugepages = 37;
  uint64 shmempmdmapped = 38;
  uint64 cmatotal = 39;
  uint64 cmafree = 40;
  uint64 hugepagestotal = 41;
  uint64 hugepagesfree = 42;
  uint64 hugepagesrsvd = 43;
  uint64 hugepagessurp = 44;
  uint64 hugepagesize = 45;
  uint64 directmap4k = 46;
  uint64 directmap2m = 47;
  uint64 directmap1g = 48;
}

message GetCPUInfoRequest {}

message GetCPUInfoResponse {
  repeated CPUInfo cpu_info = 1;
}

message CPUInfo {
  uint32 processor = 1;
  string vendor_id = 2;
  string cpu_family = 3;
  string model = 4;
  string model_name = 5;
  string stepping = 6;
  string microcode = 7;
  double cpu_mhz = 8;
  string cache_size = 9;
  string physical_id = 10;
  uint32 siblings = 11;
  string core_id = 12;
  uint32 cpu_cores = 13;
  string apic_id = 14;
  string initial_apic_id = 15;
  string fpu = 16;
  string fpu_exception = 17;
  uint32 cpu_id_level = 18;
  string wp = 19;
  repeated string flags = 20;
  repeated string bugs = 21;
  double bogo_mips = 22;
  uint32 cl_flush_size = 23;
  uint32 cache_alignment = 24;
  string address_sizes = 25;
  string power_management = 26;
}

message GetKernelStatsRequest {}

message GetKernelStatsResponse {
  KernelStats stats = 1;
}

message KernelStats {
  // Total CPU (the "cpu" line from /proc/stat)
  CpuTime total = 1;
  // Per-CPU stats (cpu0, cpu1, etc.)
  repeated CpuTime per_cpu = 2;
  // Additional kernel statistics from /proc/stat
  uint64 context_switches = 3;
  uint64 boot_time = 4;
  uint64 processes_created = 5;
  uint32 processes_running = 6;
  uint32 processes_blocked = 7;
}

message CpuTime {
  // CPU identifier: "cpu" for total, "cpu0", "cpu1", etc. for individual cores
  string name = 1;

  // All values are in USER_HZ units (typically 1/100th of a second)
  // These are monotonic counters that only increase
  uint64 user = 2;        // Time in user mode
  uint64 nice = 3;        // Time in user mode with low priority (nice)
  uint64 system = 4;      // Time in system mode
  uint64 idle = 5;        // Time in idle task
  uint64 iowait = 6;      // Time waiting for I/O to complete
  uint64 irq = 7;         // Time servicing interrupts
  uint64 softirq = 8;     // Time servicing softirqs
  uint64 steal = 9;       // Stolen time (time spent in other OS in virtualized environment)
  uint64 guest = 10;      // Time spent running a virtual CPU for guest OS
  uint64 guest_nice = 11; // Time spent running a niced guest
}

message GetNetworkInfoRequest {}

message GetNetworkInfoResponse {
  repeated NetDev devices = 1;
}

message NetDev {
  string name = 1;
  uint64 rx_bytes = 2;
  uint64 rx_packets = 3;
  uint64 rx_errors = 4;
  uint64 rx_dropped = 5;
  uint64 rx_fifo = 6;
  uint64 rx_frame = 7;
  uint64 rx_compressed = 8;
  uint64 rx_multicast = 9;
  uint64 tx_bytes = 10;
  uint64 tx_packets = 11;
  uint64 tx_errors = 12;
  uint64 tx_dropped = 13;
  uint64 tx_fifo = 14;
  uint64 tx_collisions = 15;
  uint64 tx_carrier = 16;
  uint64 tx_compressed = 17;
}

message StreamFeosLogsRequest {}

message FeosLogEntry {
  uint64 seq = 1;
  google.protobuf.Timestamp timestamp = 2;
  string level = 3;
  string target = 4;
  string message = 5;
}

message GetVersionInfoRequest {}

message GetVersionInfoResponse {
  // The version of the Linux kernel (e.g., from /proc/version).
  string kernel_version = 1;
  // The version of the running FeOS binary.
  string feos_version = 2;
}
